# robodog_ros2

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: robodog_controller.yaml  robodog_rviz_config.rviz
launch/: robodog_empty_world_launch.py
src/: robodog_position_publisher_node.py
urdf/: robodog_base_link.xacro  robodog_gazebo_ros_control_plugins.xacro  robodog_inertials.xacro  robodog_left_leg_link.xacro  robodog_lidar.xacro  robodog_p_link.xacro  robodog_r_link.xacro  robodog_right_leg_link.xacro  robodog_robot.urdf.xacro  robodog_s_link.xacro  robodog_urdf_parameters.xacro
