<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robodog</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="meric@todo.todo">meric</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
 
  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>std_msgs</depend> 
  <depend>rclpy</depend>
  
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
